samples/_failures_safe/1761313683_2a9919_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f6855c16.c: In function ‘update_stats’:
./samples/SAFE/__tmp_f6855c16.c:115:9: error: expected identifier at end of input
  115 |         strcmp(entry->timestamp, analyzer->
      |         ^~~~~~
./samples/SAFE/__tmp_f6855c16.c:115:9: error: expected declaration or statement at end of input
